# Proj_Pyxis

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/: README.md  __init__.py  pyproject.toml
backend/app/: main.py
backend/migrations/: README.md  env.py
backend/tests/: conftest.py  test_assistant_reports.py  test_case_management.py  test_counterfactual_engine.py  test_documents.py  test_evidence_review.py  test_gemini_provider.py  test_health.py  test_local_ai_security.py  test_sqlite_database.py  test_trust_gated_learning.py  test_workspace.py
data_pipeline/: __init__.py
data_pipeline/ingestion/: __init__.py  csv_loader.py  document_loader.py  transaction_stream.py
data_pipeline/normalization/: __init__.py
data_pipeline/synthetic_data/: __init__.py  dataset.py  generate_customers.py  generate_transactions.py  inject_anomalies.py
data_pipeline/validation/: __init__.py
database/: schema.sql
database/sample_queries/: README.md
docs/: api-contracts.md  architecture.md  data-flow.md  demo-script.md  docs.md  gemma-design.md  member-2-backend.md  plan.md  scenario-engine.md  security.md
document_processing/: __init__.py  extractor.py  indexer.py  ocr.py  parser.py
intelligence/: __init__.py
intelligence/anomaly_detection/: __init__.py  anomaly_scorer.py  explanations.py  isolation_forest.py  rule_engine.py  statistical_detector.py
intelligence/evidence_engine/: __init__.py  contradiction_detector.py  critical_evidence.py  evidence_collector.py  evidence_ranker.py
intelligence/financial_twin/: __init__.py  behavior_features.py  drift_detector.py  profile_updater.py  trust_gate.py  twin_builder.py
intelligence/gemma/: __init__.py  context_builder.py  decision_evidence_agent.py  evidence_critic.py  orchestrator.py  output_parser.py  report_writer.py  scenario_generator.py
intelligence/graph_analysis/: __init__.py  money_flow_tracer.py  relationship_analyzer.py  transaction_graph.py
intelligence/prompts/: compliance_report.txt  evidence_critic.txt  (+3 more)
local_ai/: __init__.py
mobile_app/: analysis_options.yaml  pubspec.yaml
models/: README.md
report_engine/: __init__.py  export.py  renderer.py
sandbox/: mock_risk_case.json  sandbox.md
scripts/: run_demo.py  seed_database.py  setup_local_model.sh  start_backend.sh
web/: index.html  package-lock.json  package.json  playwright.config.ts
(+225 files in other folders)
