[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxis-compliance"
version = "0.1.0"
description = "Local-first adaptive financial compliance and risk triage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
analytics = [
  "networkx>=3.3",
  "numpy>=2.0",
  "pandas>=2.2",
  "scikit-learn>=1.5",
]
reports = [
  "jinja2>=3.1",
  "weasyprint>=62",
]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["backend*", "intelligence*", "data_pipeline*", "report_engine*"]

[tool.setuptools.package-data]
intelligence = ["prompts/*.txt"]
report_engine = ["templates/*.html", "templates/*.css"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["backend/tests", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
