[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxis-compliance"
version = "0.1.0"
description = "Local-first adaptive financial compliance and risk triage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "httpx>=0.27",
  "jinja2>=3.1",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "python-multipart>=0.0.12",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
analytics = [
  "networkx>=3.3",
  "numpy>=2.0",
  "pandas>=2.2",
  "scikit-learn>=1.5",
]
reports = [
  "weasyprint>=62",
]
documents = [
  "pymupdf>=1.24",
]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = [
  "backend*",
  "data_pipeline*",
  "document_processing*",
  "intelligence*",
  "local_ai*",
  "report_engine*",
]

[tool.setuptools.package-data]
intelligence = ["prompts/*.txt"]
report_engine = ["templates/*.html", "templates/*.css"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["backend/tests", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
